pulizia codice (completa)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-#jpa
+#jpa  ---   settare "update" per mantenere i dati salvati persistenti
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=false
 
-#postgres
+#postgres  ------    settare l'URL del database postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#          ------    settare username e password del database postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
